(library
 (name vector)
 (modules vector)
 (public_name vector))

(library
 (name test)
 (modules test)
 (libraries vector)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(executable
 (name benchmark)
 (public_name benchmark)
 (package _dev)
 (modules benchmark)
 (libraries mtime.clock.os vector))

(rule
 (alias runtest)
 (action
  (run ./benchmark.exe)))
