(library
 (name pvec)
 (modules pvec)
 (public_name pvec))

(library
 (name test)
 (modules test)
 (libraries pvec))

(executable
 (name benchmark)
 (public_name benchmark)
 (package _dev)
 (modules benchmark)
 (libraries mtime.clock.os pvec))

(rule
 (alias runtest)
 (action
  (run ./benchmark.exe)))
